v2 (not working rn)

--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,6 @@ body {
     position: relative;
     color: #fff;
     left: -50%;
-    /* left: 0; */
     width: 100%;
     background: #09001d;
     display: flex;
@@ -220,6 +219,8 @@ body {
     opacity: 0;
     pointer-events: none;
     transform: scale(.9);
+    transition: .3s ease;
+    transition-delay: 0s;
 }
 
 .quiz-section .quiz-box.active {
@@ -259,6 +260,11 @@ body {
     font-weight: 600;
 }
 
+.option-list .option:hover {
+    background: rgba(255, 255, 255, .1);
+    border-color: rgba(255, 255, 255, .1);
+}
+
 .option-list .option {
     width: 100%;
     padding: 12px;
@@ -270,9 +276,10 @@ body {
     cursor: pointer;
 }
 
-.option-list .option:hover {
-    background: rgba(255, 255, 255, .1);
-    border-color: rgba(255, 255, 255, .1);
+.option-list .option.active {
+    background: #09001d;
+    color: #00a63d;
+    border-color: #00a63d;
 }
 
 .quiz-box .quiz-footer {
@@ -302,7 +309,80 @@ body {
     transition: .5s;
 }
 
-.quiz-footer .next-btn:hover {
+
+.quiz-footer .next-btn.active:hover {
+    background: #950170;
+    border-color: #950170;
+}
+
+
+.quiz-footer .next-btn.active {
+    pointer-events: auto;
     background: #c40094;
-    border-color: #c40094
+    border-color: #c40094;
+    color: #fff;
+}
+
+.quiz-section .result-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    background: transparent;
+    border: 2px solid #c40094;
+    border-radius: 6px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transform: scale(.9);
+    transition: .3s ease;
+    transition-delay: 0s;
+}
+
+.quiz-section .result-box.active {
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
+    transform: translate(-50%, -50%);
+    transition: 0.5s ease;
+    transition-delay: 1s;
+    
+}
+
+.result-box h2 {
+    font-size: 52px;
+}
+.result-box .buttons {
+    display: flex;
+}
+.buttons button {
+    width: 130px;
+    height: 47px;
+    background: #c40094;
+    border: 2px solid #c40094;
+    outline: none;
+    border-radius: 6px;
+    color: #fff;
+    font-weight: 600;
+    margin: 20px;
+    cursor: pointer;
+}
+
+.buttons button:nth-child(1):hover {
+    background: #950170;
+    border-color: #950170;
+}
+
+.buttons button:nth-child(2) {
+    background: transparent;
+    color: #c40094;
+}
+
+.buttons button:nth-child(2):hover {
+    background: #c40094;
+    color: #fff;
 }
