--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-::-webkit-scrollbar{
-    width: 12px;
-}
-::-webkit-scrollbar-thumb{
-    background: linear-gradient(transparent, #30ff00);
-    border-radius: 6px;
-}
-::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(transparent, #00c6ff);
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -27,7 +16,6 @@ body {
 
 .secton .home {
     position: relative;
-    width: 50%;
 }
 
 section.home video {
@@ -43,19 +31,18 @@ section.home video {
     pointer-events: auto;
     overflow-y: auto;
 }
+
 .main.active {
     filter: blur(15px);
     pointer-events: none;
 }
 
 .container {
-    display: flex;
     height: 100vh;
-    width: 200%;
     position: relative;
 }
 
-.header {
+header {
     position: fixed;
     top: 0;
     left: 0;
@@ -71,6 +58,12 @@ section.home video {
 .header:hover {
     background-color: #fff;
 }
+
+.header.active {
+    background-color: #fff;
+}
+
+
 
 .logo {
     font-family: "Poppins", sans-serif;
@@ -97,7 +90,6 @@ section.home video {
 
 .home {
     position: relative;
-    left: -50%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -106,8 +98,10 @@ section.home video {
 
 .home-content {
     max-width: 600px;
+    height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -118,16 +112,6 @@ section.home video {
     color: white;
     text-shadow: 0 0 10px rgba(0, 0, 0, .3);
     margin-bottom: 20px;
-}
-
-.home-content p {
-    text-align: center;
-    text-shadow: 0 0 10px rgba(0, 0, 0, .3);
-    color: #cdeef7;
-    font-size: 18px;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 30px;
 }
 
 .home-content .start-btn {
@@ -155,508 +139,36 @@ section.home video {
     background-color: #f5f5f5;
     padding: 20px;
     text-align: center;
-    width: 50%;
 }
 
-.information-section h2 {
-    font-size: 24px;
-}
-
-.information-section p {
-    font-size: 18px;
-}
-
-.information-section ol {
-    list-style-type: decimal;
-    font-size: 16px;
-    text-align: left;
-}
-
-.popup-info {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    background: #fff;
-    border-radius: 6px;
-    padding: 10px 25px;
-    opacity: 0;
-    pointer-events: none;
-    transition: .3s ease;
-}
-
-.popup-info.active {
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(1);
-}
-.popup-info h2 {
-    font-size: 50px;
-    color: #329da8;
-    text-align: center;
-}
-
-.popup-info .info {
-    display: inline-block;
-    color: #333;
-    font-weight: 500;
-    margin: 4px 0;
-}
-
-.popup-info .btn-group {
+.image-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    border-top: 1px solid #999;
-    margin-top: 10px;
-    padding: 15px 0 7px;
+    flex-wrap: wrap;
 }
 
-.popup-info .btn-group .info-btn {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 130px;
-    height: 45px;
-    background: #66ffcc;
-    border: 2px solid #66ffcc;
-    outline: none;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    font-weight: 600;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    transition: 0.5s;
+.image-item {
+    text-align: center; /* Center align the text and image within each item */
+    margin: 10px;
 }
 
-.popup-info .btn-group .info-btn:nth-child(1){
-    background: transparent;
-    color: #333;
-    transition: 0.5s;
-}
-
-.popup-info .btn-group .info-btn:nth-child(1):hover{
-    background: #329da8;
-    color: #fff;
-}
-
-
-.popup-info .btn-group .info-btn:nth-child(2):hover{
-    background: #66a4d4;
-    border-color: #66a4d4;
-}
-
-.quiz-section {
-    position: relative;
-    color: #fff;
-    left: -50%;
-    width: 100%;
-    background: #e3f0fa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: .8s ease-in-out;
-    transition-delay: .25s;
-    z-index: 100;
-}
-
-.quiz-section.active {
-    left: 0;
-}
-
-.quiz-section .quiz-box {
-    position: relative;
-    width: 500px;
-    background: #66a4d4;
-    border: 2px solid #66ffcc;
-    border-radius: 6px;
-    flex-direction: column;
-    padding: 20px 30px;
-    opacity: 0;
-    pointer-events: none;
-    transform: scale(.9);
-    transition: .3s ease;
-    transition-delay: 0s;
-}
-
-.quiz-section .quiz-box.animate {
-    -webkit-animation: rotate-center 0.6s ease-in-out both;
-    animation: rotate-center 0.6s ease-in-out both;
-}
-
-.quiz-section .quiz-box.animate1 {
-    -webkit-animation: rotate-scale-down-ver 1s linear both;
-	animation: rotate-scale-down-ver 1s linear both;
-}
-
-/**
- * ----------------------------------------
- * animation rotate-scale-down-ver
- * ----------------------------------------
- */
- @-webkit-keyframes rotate-scale-down-ver {
-    0% {
-      -webkit-transform: scale(1) rotateY(0);
-              transform: scale(1) rotateY(0);
-    }
-    50% {
-      -webkit-transform: scale(0.5) rotateY(180deg);
-              transform: scale(0.5) rotateY(180deg);
-    }
-    100% {
-      -webkit-transform: scale(1) rotateY(360deg);
-              transform: scale(1) rotateY(360deg);
-    }
-  }
-  @keyframes rotate-scale-down-ver {
-    0% {
-      -webkit-transform: scale(1) rotateY(0);
-              transform: scale(1) rotateY(0);
-    }
-    50% {
-      -webkit-transform: scale(0.5) rotateY(180deg);
-              transform: scale(0.5) rotateY(180deg);
-    }
-    100% {
-      -webkit-transform: scale(1) rotateY(360deg);
-              transform: scale(1) rotateY(360deg);
-    }
-  }
-
-/**
- * ----------------------------------------
- * animation rotate-center
- * ----------------------------------------
- */
- @-webkit-keyframes rotate-center {
-    0% {
-      -webkit-transform: rotate(0);
-              transform: rotate(0);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-              transform: rotate(360deg);
-    }
-  }
-  @keyframes rotate-center {
-    0% {
-      -webkit-transform: rotate(0);
-              transform: rotate(0);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-              transform: rotate(360deg);
-    }
-  }
-
-.quiz-section .quiz-box.active {
-    opacity: 1;
-    pointer-events: auto;
-    transform: scale(1);
-    transition: 1s ease;
-    transition-delay: 1s;
-    max-height: 600px;
-    overflow-y: auto;
-}
-
-.quiz-box h1 {
-    font-size: 32px;
-    text-align: center;
-    background: linear-gradient(45deg, transparent, #66ffcc, transparent);
-    border-radius: 6px;
-}
-
-.quiz-box .quiz-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-    border-bottom: 2px solid #66ffcc;
-    margin-bottom: 30px;
-
-}
-
-.quiz-header span {
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.quiz-box .question-text {
-    font-size: 24px;
-    font-weight: 600;
-}
-
-.option-list .option:hover {
-    background: rgba(255, 255, 255, .1);
-    border-color: rgba(255, 255, 255, .1);
-}
-
-.option-list .option {
-    width: 100%;
-    padding: 12px;
-    background: #cdeef7;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 4px;
-    font-size: 17px;
-    color: black;
-    margin: 15px 0;
-    cursor: pointer;
-}
-
-.option-list .option.active {
-    background: #66ffcc;
-    color: #00a63d;
-    border-color: #00a63d;
-}
-
-.quiz-box .quiz-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-top: 2px solid #66ffcc;
-    padding-top: 20px;
-    margin-top: 30px;
-}
-
-.quiz-footer .question-total {
-    font-weight: 600;
-}
-
-.quiz-footer .next-btn {
-    width: 100px;
-    height: 45px;
-    background: rgba(255, 255, 255, .1);
-    border: 2px solid rgba(255, 255, 255, .1);
-    outline: none;
-    border-radius: 6px;
-    color: rgba(255, 255, 255, .3);
-    font-weight: 600;
-    cursor: pointer;
-    /* pointer-events: none; */
-    transition: .5s;
-}
-
-
-.quiz-footer .next-btn.active:hover {
-    background: #329da8;
-    border-color: #329da8;
-}
-
-
-.quiz-footer .next-btn.active {
-    pointer-events: auto;
-    background: #66ffcc;
-    border-color: #66ffcc;
-    color: #09001d;
-
-}
-
-.quiz-footer .prev-btn {
-    width: 100px;
-    height: 45px;
-    background: rgba(255, 255, 255, .1);
-    border: 2px solid rgba(255, 255, 255, .1);
-    outline: none;
-    border-radius: 6px;
-    color: rgba(255, 255, 255, .3);
-    font-weight: 600;
-    cursor: pointer;
-    /* pointer-events: none; */
-    transition: .5s;
-}
-
-.quiz-footer .prev-btn.active {
-    pointer-events: auto;
-    background: #66ffcc;
-    border-color: #66ffcc;
-    color: #09001d;
-    font-weight: 600;
-}
-
-.quiz-footer .particle{
+.image-item img {
+    background-size: cover;
     border-radius: 50%;
-    left: 0;
-    pointer-events: none;
-    position: fixed;
-    top: 0;
-    opacity: 0;
+    width: 100px;
+    height: 100px;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
-.quiz-section .result-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 500px;
-    background: #329da8;
-    border: 2px solid #66ffcc;
-    border-radius: 6px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    transform: scale(.9);
-    transition: .3s ease;
-    transition-delay: 0s;
+.image-item p {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #333;
 }
 
-.quiz-section .result-box.active {
-    opacity: 1;
-    pointer-events: auto;
-    transform: scale(1);
-    transform: translate(-50%, -50%);
-    transition: 0.5s ease;
-    transition-delay: 1s;
-    
-}
 
-.result-box h2 {
-    font-size: 52px;
-}
-.result-box .buttons {
-    display: flex;
-}
-.buttons button {
-    width: 130px;
-    height: 47px;
-    background: #00c6ff;
-    border: 2px solid #00c6ff;
-    outline: none;
-    border-radius: 6px;
-    color: #fff;
-    font-weight: 600;
-    margin: 20px;
-    cursor: pointer;
-}
 
-.buttons button:nth-child(1):hover {
-    background: #66ffcc;
-    border-color: #66ffcc;
-}
-
-.buttons button:nth-child(2) {
-    background: transparent;
-    color: #329da8;
-}
-
-.buttons button:nth-child(2):hover {
-    background: #66ffcc;
-    color: #fff;
-}
-
-.pill{
-    display: inline-block;
-    height: 80px;
-    width: 40px;
-    border: 2px solid black;
-    border-radius: 20px;
-    overflow:hidden;
-}
-
-.white{
-    height: 50%;
-    width: 100%;
-    background-color:white;
-}
-
-.purple{
-    height: 50%;
-    width: 100%;
-    background-color: purple;
-    animation: fill10Percent 2s infinite;
-}
-
-@keyframes fill10Percent{
-    0% {
-        height: 0;
-    }
-    100%{
-        height: 10%;
-    }
-}
-
-@keyframes fill20Percent{
-    0% {
-        height: 10%;
-    }
-    100%{
-        height: 20%;
-    }
-}
-
-@keyframes fill30Percent{
-    0% {
-        height: 20%;
-    }
-    100%{
-        height: 30%;
-    }
-}
-
-@keyframes fill40Percent{
-    0% {
-        height: 30%;
-    }
-    100%{
-        height: 40%;
-    }
-}
-
-@keyframes fill50Percent{
-    0% {
-        height: 40%;
-    }
-    100%{
-        height: 50%;
-    }
-}
-
-@keyframes fill60Percent{
-    0% {
-        height: 50%;
-    }
-    100%{
-        height: 60%;
-    }
-}
-
-@keyframes fill70Percent{
-    0% {
-        height: 60%;
-    }
-    100%{
-        height: 70%;
-    }
-}
-
-@keyframes fill80Percent{
-    0% {
-        height: 70%;
-    }
-    100%{
-        height: 80%;
-    }
-}
-
-@keyframes fill90Percent{
-    0% {
-        height: 80%;
-    }
-    100%{
-        height: 90%;
-    }
-}
-
-@keyframes fill100Percent{
-    0% {
-        height: 90%;
-    }
-    100%{
-        height: 100%;
-    }
-}
 
