--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     min-height: 100vh;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,188,255,1) 100%);
     overflow: hidden;
+    overflow-y: auto;
 }
 
 .secton .home {
@@ -29,16 +30,9 @@ section.home video {
 .main {
     transition: .3s ease;
     pointer-events: auto;
-    overflow-y: auto;
-}
-
-.main.active {
-    filter: blur(15px);
-    pointer-events: none;
 }
 
 .container {
-    height: 100vh;
     position: relative;
 }
 
@@ -62,8 +56,6 @@ section.home video {
 .header.active {
     background-color: #fff;
 }
-
-
 
 .logo {
     font-family: "Poppins", sans-serif;
@@ -97,7 +89,6 @@ section.home video {
 }
 
 .home-content {
-    max-width: 600px;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -136,9 +127,17 @@ section.home video {
 }
 
 .information-section {
-    background-color: #f5f5f5;
+    background-color: #FFFFF0;
     padding: 20px;
     text-align: center;
+    min-height: 60vh;
+}
+
+.information-section h2 {
+    font-size: 48px;
+    margin-bottom: 20px;
+    color: #333;
+    font-weight: 500;
 }
 
 .image-container {
@@ -156,18 +155,30 @@ section.home video {
 .image-item img {
     background-size: cover;
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 300px;
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
 }
 
-.image-item p {
+.main-desc {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
     margin-top: 10px;
-    font-size: 14px;
     color: #333;
 }
+
+.sub-desc {
+    margin-top: 10px;
+    color: #333;
+}
+
+.reminder {
+    margin-top: 20px;
+    border-top: 2px solid rgba(0, 0, 0, .3)
+}
+
 
 
 
