--- a/styles.css
+++ b/styles.css
@@ -255,6 +255,7 @@ section.home video {
     width: 100%;
     background: #e3f0fa;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     transition: .8s ease-in-out;
@@ -451,65 +452,6 @@ section.home video {
     color: #09001d;
 }
 
-.quiz-footer .next-btn::before, .next-btn::after{
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    background-repeat: no-repeat;
-}
-
-.quiz-footer .next-btn.animate::before{
-    top: 70%;
-    background-image: radial-gradiant(circle, #1a47d9 20%, transparent 20%), 
-    radial-gradiant(circle, transparent 20%,#1a47d9 20%, transparent 30%),
-    radial-gradiant(circle,#1a47d9 20%, transparent 20%),
-    radial-gradiant(circle, transparent 10%,#1a47d9 15%, transparent 20%),
-    radial-gradiant(circle,#1a47d9 20%, transparent 20%),
-    radial-gradiant(circle,#1a47d9 20%, transparent 20%),
-    radial-gradiant(circle,#1a47d9 20%, transparent 20%),
-    radial-gradiant(circle,#1a47d9 20%, transparent 20%),;
-    background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 18% 18%;
-    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
-    animation: topBubbles 0.6s ease-in-out forwards;
-}
-
-@keyframes topBubbles{
-    50%{
-        background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
-    }
-    100%{
-        background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-    }
-}
-.quiz-footer .next-btn.animate::after{
-    bottom: 70%;
-    background-image: radial-gradiant(circle, #1a47d9 20%, transparent 20%),
-    radial-gradiant(circle, transparent 10%,#1a47d9 15%, transparent 20%),
-    radial-gradiant(circle, #1a47d9 20%, transparent 20%),
-    radial-gradiant(circle, #1a47d9 20%, transparent 20%),
-    radial-gradiant(circle, #1a47d9 20%, transparent 20%),
-    radial-gradiant(circle, #1a47d9 20%, transparent 20%),
-    radial-gradiant(circle, #1a47d9 20%, transparent 20%);
-    background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
-    background-position: 10% 0%, 30% 10%, 55% 0%, 70% 0%, 85% 0%, 70% 0%, 70% 0%;
-    animation: bottomBubbles 0.6s ease-in-out forwards;
-}
-
-@keyframes bottomBubbles{
-    50%{
-        background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
-    }
-    100%{
-        background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 115% 10%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-    }
-}
-
 .quiz-footer .prev-btn {
     width: 100px;
     height: 45px;
@@ -597,25 +539,30 @@ section.home video {
 }
 
 .pill{
-    display: inline-block;
-    height: 80px;
-    width: 40px;
-    border: 2px solid black;
-    border-radius: 20px;
-    overflow:hidden;
+    position: relative;
+    width: 500px;
+    height: 300px;
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.white{
-    height: 50%;
-    width: 100%;
-    background-color:white;
+.pill .pillButton{
+    position: relative;
+    width: 100px;
+    height: 45px;
+    background-color: #30ff00;
+    cursor: pointer;
 }
 
-.purple{
-    height: 50%;
-    width: 100%;
-    background-color: purple;
-    animation: fill10Percent 2s infinite;
+.capsule {
+    overflow: hidden;
+    clip-path: url(#clipPath);
 }
 
-
+#innerRect {
+    fill: url(#colorGradient);
+    transition: width 0.5s;
+}
