--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -29,6 +29,12 @@ header {
     padding: 10px;
 }
 
+.fixed-header header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+}
 
 .logo {
     font-family: "Poppins", sans-serif;
@@ -39,27 +45,39 @@ header {
     filter: drop-shadow(0 0 5px #09001d);
 }
 
-.main {
-    display: flex;
-    flex-direction: column; /* Change to column to stack header on top of the content */
-    align-items: center; /* Center items horizontally */
-    justify-content: flex-start; /* Align items at the start (top) of the column */
-    height: 100%;
-}
-
 .beginning {
     display: flex;
     flex: 1;
     width: 100%;
+    max-width: 100vw;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    flex-wrap: wrap;
+}
+
+.beginning.fade-out {
+    animation: fade-out 1s forwards;
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 .beginning-img {
-    width: 50%;
-    height: 100%;
+    max-height: 100%;
     object-fit: cover;
+    width: 50%
 }
 
 .beginning-content {
+    width: 50%;
+    height: 100%;
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -140,6 +158,297 @@ header {
 .text-block.show {
     opacity: 1;
 }
+
+.questionnaire {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    background-color: #FFFFF0;
+}
+
+.questionnaire.fade-in {
+    animation: fade-in 1s;
+}
+
+.questionnaire.fade-out {
+    animation: fade-out 1s;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.question {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.question h2 {
+    font-family: "Poppins", sans-serif;
+    margin-bottom: 30px;
+    font-size: 32px;
+}
+
+.question p {
+    margin: 10px 0 30px 0;
+    font-weight: 600;
+    text-align: center;
+}
+
+form {
+    position: relative;
+    width: 400px;
+    height: 75px;
+}
+
+input {
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 10px;
+    font-size: 24px;
+    padding: 8px 40px 8px 20px;
+    border: none;
+    box-shadow: 0 5px 8px 3px black;
+}
+
+input:focus {
+    outline: none;
+}
+
+form button {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 50px;
+    height: 100;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    background: none;
+    font-size: 32px;
+}
+
+button i {
+    color: rgb(93, 94, 95);
+}
+
+button:hover i {
+    color: rgb(162, 163, 165);
+}
+
+.hello-section {
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+}
+
+.hello-section.fade-in {
+    animation: fade-in 1s;
+}
+
+h1 .emoji {
+    font-size: 32px;
+}
+
+.emoji {
+    font-size: 100px;
+    animation: waving-hand 2.5s infinite;
+    transform-origin: 70% 70%;
+    display: inline-block;
+}
+
+@keyframes waving-hand {
+    0% {
+        transform: rotate(0deg);
+    }
+    10% {
+        transform: rotate(14deg);
+    }
+    20% {
+        transform: rotate(-8deg);
+    }
+    30% {
+        transform: rotate(14deg);
+    }
+    40% {
+        transform: rotate(-4.0deg);
+    }
+    50% {
+        transform: rotate(10deg);
+    }
+    60% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+.quiz-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+}
+
+.quiz-section.fade-in {
+    animation: fade-in 1s;
+}
+
+.age-section {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.quiz-section h1 {
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+.age-response-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 400px;
+    margin: 20px 15px 10px;
+    padding: 20px;
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    flex-direction: column;
+    border-radius: 25px;
+    transition: 0.1s;
+    background-color: #fff;
+}
+
+.age-response-box i {
+    font-size: 100px;
+    margin-bottom: 20px;
+}
+
+.age-response-box p {
+    font-size: 24px;
+    margin-top: 20px;
+    font-weight: 300;
+}
+
+.age-response-box:hover {
+    border: 2px solid #333;
+}
+
+/* Media query for smaller screens */
+@media screen and (max-width: 600px) {
+    .age-section {
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+}
+
+/* Media query for screens between 601px and 900px */
+@media screen and (min-width: 601px) and (max-width: 700px) {
+
+    .age-response-box {
+        width: 200px;
+        height: 250px;  /* Adjust the width for screens between 601px and 900px */
+    }
+}
+
+@media screen and (min-width: 701px) and (max-width: 800px) {
+
+    .age-response-box {
+        width: 225px;
+        height: 281.25px;  
+    }
+}
+
+@media screen and (min-width: 801px) and (max-width: 900px) {
+
+    .age-response-box {
+        width: 250px;
+        height: 312.5px;  
+    }
+}
+
+/* Media query for screens between 901px and 1200px */
+@media screen and (min-width: 901px) and (max-width: 1200px) {
+    .age-response-box {
+        width: 275px;
+        height: 343.75px; /* Adjust the width for screens between 901px and 1200px */
+    }
+}
+
+/* Media query for screens above 1200px */
+@media screen and (min-width: 1201px) {
+    .age-response-box {
+        width: 300px;
+        height: 400px; /* Default width for screens above 1200px */
+    }
+}
+
+.thank-you-popup,
+.dont-worry-popup {
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 25%; /* Adjust this value to your preference, 75% of the viewport height */
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.basics {
+    display: flex;
+    flex: 1;
+    width: 100%;
+    max-width: 100vw;
+    height: 100vh;
+    position: relative;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.white-bg {
+    max-height: 100%;
+    object-fit: cover;
+    width: 50%
+}
+
+.basics-content {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    background-color: #f5f5f5;
+    justify-content: center;
+    align-items: center; /* Center items horizontally */
+    padding: 20px; /* Add padding for better spacing */
+}
+
+
+
+
 
 
 
