--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -249,14 +249,14 @@ button:hover i {
     color: rgb(162, 163, 165);
 }
 
-.hello-section {
+.hello {
     justify-content: center;
     align-items: center;
     height: 100vh;
     flex-direction: column;
 }
 
-.hello-section.fade-in {
+.hello.fade-in {
     animation: fade-in 1s;
 }
 
@@ -298,7 +298,7 @@ h1 .emoji {
     }
 }
 
-.quiz-section {
+.quiz {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -306,7 +306,7 @@ h1 .emoji {
     flex-direction: column;
 }
 
-.quiz-section.fade-in {
+.quiz.fade-in {
     animation: fade-in 1s;
 }
 
@@ -445,6 +445,98 @@ h1 .emoji {
     align-items: center; /* Center items horizontally */
     padding: 20px; /* Add padding for better spacing */
 }
+
+.basics h3 {
+    margin-bottom: 20px;
+    border-top: 2px solid rgba(0, 0, 0, 1);
+    font-size: 24px;
+    text-align: center;
+}
+
+.basics h1 {
+    font-size: 32px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.basics p {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.basics a {
+    border-bottom: 1px solid #333;
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+    margin-top: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+
+/* Center the answers vertically on the screen */
+.questions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    height: 100%;
+}
+
+.first-question {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 600px;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20vh auto; 
+}
+
+.first-question h3 {
+    font-weight: 200;
+    font-size: 32px;
+    margin-bottom: 10px;
+    white-space: nowrap;
+}
+
+.first-question p {
+    font-size: 18px;
+    margin-bottom: 20px;
+    color: #2b2828;
+
+}
+
+.answer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin: 10px;
+}
+
+.answer-circle {
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    margin: 15px;
+    height: 200px;
+    border-radius: 50%;
+    border: 2px solid #ddd; /* Light grey border */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* Hint of shadow */
+    transition: border-color 0.3s, background-color 0.3s; /* Smooth transition effect */
+}
+
+.answer-circle:hover {
+    border-color: #333; /* Solid blackish color on hover */
+}
+
+
 
 
 
