--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -186,7 +186,7 @@ header {
     }
 }
 
-.question {
+.question-name {
     text-align: center;
     position: absolute;
     top: 50%;
@@ -194,13 +194,13 @@ header {
     transform: translate(-50%, -50%);
 }
 
-.question h2 {
+.question-name h2 {
     font-family: "Poppins", sans-serif;
     margin-bottom: 30px;
     font-size: 32px;
 }
 
-.question p {
+.question-name p {
     margin: 10px 0 30px 0;
     font-weight: 600;
     text-align: center;
@@ -310,7 +310,7 @@ h1 .emoji {
     animation: fade-in 1s;
 }
 
-.age-section {
+.response-section {
     text-align: center;
     display: flex;
     flex-direction: row;
@@ -323,7 +323,7 @@ h1 .emoji {
     margin-bottom: 20px;
 }
 
-.age-response-box {
+.response-box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -340,24 +340,24 @@ h1 .emoji {
     background-color: #fff;
 }
 
-.age-response-box i {
+.response-box i {
     font-size: 100px;
     margin-bottom: 20px;
 }
 
-.age-response-box p {
+.response-box p {
     font-size: 24px;
     margin-top: 20px;
     font-weight: 300;
 }
 
-.age-response-box:hover {
+.response-box:hover {
     border: 2px solid #333;
 }
 
 /* Media query for smaller screens */
 @media screen and (max-width: 600px) {
-    .age-section {
+    .response-section {
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
@@ -367,7 +367,7 @@ h1 .emoji {
 /* Media query for screens between 601px and 900px */
 @media screen and (min-width: 601px) and (max-width: 700px) {
 
-    .age-response-box {
+    .response-box {
         width: 200px;
         height: 250px;  /* Adjust the width for screens between 601px and 900px */
     }
@@ -375,7 +375,7 @@ h1 .emoji {
 
 @media screen and (min-width: 701px) and (max-width: 800px) {
 
-    .age-response-box {
+    .response-box {
         width: 225px;
         height: 281.25px;  
     }
@@ -383,7 +383,7 @@ h1 .emoji {
 
 @media screen and (min-width: 801px) and (max-width: 900px) {
 
-    .age-response-box {
+    .response-box {
         width: 250px;
         height: 312.5px;  
     }
@@ -391,7 +391,7 @@ h1 .emoji {
 
 /* Media query for screens between 901px and 1200px */
 @media screen and (min-width: 901px) and (max-width: 1200px) {
-    .age-response-box {
+    .response-box {
         width: 275px;
         height: 343.75px; /* Adjust the width for screens between 901px and 1200px */
     }
@@ -399,7 +399,7 @@ h1 .emoji {
 
 /* Media query for screens above 1200px */
 @media screen and (min-width: 1201px) {
-    .age-response-box {
+    .response-box {
         width: 300px;
         height: 400px; /* Default width for screens above 1200px */
     }
@@ -484,7 +484,7 @@ h1 .emoji {
     height: 100%;
 }
 
-.first-question {
+.question {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -496,14 +496,14 @@ h1 .emoji {
     margin: 20vh auto; 
 }
 
-.first-question h3 {
+.question h3 {
     font-weight: 200;
     font-size: 32px;
     margin-bottom: 10px;
     white-space: nowrap;
 }
 
-.first-question p {
+.question p {
     font-size: 18px;
     margin-bottom: 20px;
     color: #2b2828;
@@ -519,6 +519,7 @@ h1 .emoji {
 }
 
 .answer-circle {
+    cursor: pointer;
     font-size: 20px;
     display: flex;
     justify-content: center;
