--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -318,7 +318,7 @@ h1 .emoji {
     align-items: center;
 }
 
-.quiz-section h1 {
+.quiz h1 {
     font-size: 32px;
     margin-bottom: 20px;
 }
@@ -340,12 +340,34 @@ h1 .emoji {
     background-color: #fff;
 }
 
-.response-box i {
+.response-box-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 400px;
+    margin: 20px 15px 10px;
+    padding: 20px;
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    flex-direction: column;
+    border-radius: 25px;
+    transition: 0.1s;
+    background-color: #fff;
+}
+
+
+.response-box-1 i {
     font-size: 100px;
     margin-bottom: 20px;
 }
-
 .response-box p {
+    font-size: 24px;
+    margin-top: 20px;
+    font-weight: 300;
+}
+.response-box-1 p {
     font-size: 24px;
     margin-top: 20px;
     font-weight: 300;
@@ -353,6 +375,10 @@ h1 .emoji {
 
 .response-box:hover {
     border: 2px solid #333;
+}
+.response-box-1:hover {
+    border: 2px solid #333;
+
 }
 
 /* Media query for smaller screens */
@@ -371,11 +397,20 @@ h1 .emoji {
         width: 200px;
         height: 250px;  /* Adjust the width for screens between 601px and 900px */
     }
+    
+    .response-box-1 {
+        width: 200px;
+        height: 250px;  /* Adjust the width for screens between 601px and 900px */
+    }
 }
 
 @media screen and (min-width: 701px) and (max-width: 800px) {
 
     .response-box {
+        width: 225px;
+        height: 281.25px;  
+    }
+    .response-box-1 {
         width: 225px;
         height: 281.25px;  
     }
@@ -387,6 +422,10 @@ h1 .emoji {
         width: 250px;
         height: 312.5px;  
     }
+    .response-box-1 {
+        width: 250px;
+        height: 312.5px;  
+    }
 }
 
 /* Media query for screens between 901px and 1200px */
@@ -395,6 +434,10 @@ h1 .emoji {
         width: 275px;
         height: 343.75px; /* Adjust the width for screens between 901px and 1200px */
     }
+    .response-box-1 {
+        width: 275px;
+        height: 343.75px;  
+    }
 }
 
 /* Media query for screens above 1200px */
@@ -402,6 +445,10 @@ h1 .emoji {
     .response-box {
         width: 300px;
         height: 400px; /* Default width for screens above 1200px */
+    }
+    .response-box-1 {
+        width: 300px;
+        height: 400px;  
     }
 }
 
@@ -497,10 +544,12 @@ h1 .emoji {
 }
 
 .question h3 {
+    display: flex;
+    flex-wrap: wrap;
     font-weight: 200;
     font-size: 32px;
     margin-bottom: 10px;
-    white-space: nowrap;
+    
 }
 
 .question p {
