--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -548,7 +548,7 @@ h1 .emoji {
     flex-wrap: wrap;
     font-weight: 200;
     font-size: 32px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     
 }
 
@@ -586,6 +586,69 @@ h1 .emoji {
     border-color: #333; /* Solid blackish color on hover */
 }
 
+.radio-item [type="radio"] {
+    display: none;
+}
+
+.radio-item + .radio-item {
+    margin-top: 15px;
+}
+
+.radio-item label {
+    line-height: 25px;
+    display: block;
+    padding: 15px 55px;
+    background: #ddd;
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 400;
+    min-width: auto;
+    width: auto;
+    height: auto;
+    white-space: nowrap;
+    position: relative;
+    transition: .4s ease-in-out 0s;
+
+}
+
+.radio-item label:after,
+.radio-item label:before {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+}
+
+.radio-item label:after {
+    height: 20px;
+    width: 20px;
+    border: 2px solid #333;
+    left: 20px;
+    top: calc(50% - 12px);
+}
+
+.radio-item label:before {
+    background: #333;
+    height: 10px;
+    width: 10px;
+    left: 27px;
+    top: calc(50% - 5PX);
+    transform: scale(5);
+    opacity: 0;
+    visibility: hidden;
+    transition: .4s ease-in-out 0s;
+}
+
+.radio-item [type="radio"]:checked ~ label {
+    border-color: #333;
+}
+
+.radio-item [type="radio"]:checked ~ label:before {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+}
 
 
 
