--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -475,6 +475,17 @@ h1 .emoji {
     overflow: hidden;
 }
 
+.goals {
+    display: flex;
+    flex: 1;
+    width: 100%;
+    max-width: 100vw;
+    height: 100vh;
+    position: relative;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
 .white-bg {
     max-height: 100%;
     object-fit: cover;
@@ -500,7 +511,20 @@ h1 .emoji {
     text-align: center;
 }
 
+.goals h3 {
+    margin-bottom: 20px;
+    border-top: 2px solid rgba(0, 0, 0, 1);
+    font-size: 24px;
+    text-align: center;
+}
+
 .basics h1 {
+    font-size: 32px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.goals h1 {
     font-size: 32px;
     margin-bottom: 10px;
     text-align: center;
@@ -511,7 +535,22 @@ h1 .emoji {
     margin-top: 10px;
 }
 
+.goals p {
+    text-align: center;
+    margin-top: 10px;
+}
+
 .basics a {
+    border-bottom: 1px solid #333;
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+    margin-top: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.goals a {
     border-bottom: 1px solid #333;
     color: inherit;
     text-decoration: none;
@@ -594,6 +633,7 @@ h1 .emoji {
     margin-top: 15px;
 }
 
+
 .radio-item label {
     line-height: 25px;
     display: block;
@@ -610,7 +650,10 @@ h1 .emoji {
     white-space: nowrap;
     position: relative;
     transition: .4s ease-in-out 0s;
+}
 
+.radio-item label:hover {
+    border: 2px solid #333;
 }
 
 .radio-item label:after,
